fix nav links, fix html docs for better readability

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-.cat1 {
+.me {
   float: left;
   height: 220px;
   padding-right: 5px;
